--- a/viewer.html
+++ b/viewer.html
@@ -4,21 +4,123 @@
     <title>Title</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
-      @import url(//fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-      @import url(//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-      @import url(//fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
+      @import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+      @import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
+      @import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
-      body { font-family: 'Droid Serif'; }
+      body {
+        font-family: 'Droid Serif';
+      }
       h1, h2, h3 {
         font-family: 'Yanone Kaffeesatz';
-        font-weight: normal;
+        font-weight: 400;
+        margin-bottom: 0;
       }
+      .remark-slide-content h1 { font-size: 3em; }
+      .remark-slide-content h2 { font-size: 2em; }
+      .remark-slide-content h3 { font-size: 1.6em; }
+      .footnote {
+        position: absolute;
+        bottom: 3em;
+      }
+      li p { line-height: 1.25em; }
+      .red { color: #fa0000; }
+      .large { font-size: 2em; }
+      a, a > code {
+        color: rgb(249, 38, 114);
+        text-decoration: none;
+      }
+      code {
+        -moz-border-radius: 5px;
+        -web-border-radius: 5px;
+        background: #e7e8e2;
+        border-radius: 5px;
+      }
+      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+      .remark-code-line-highlighted     { background-color: #373832; }
+      .pull-left {
+        float: left;
+        width: 47%;
+      }
+      .pull-right {
+        float: right;
+        width: 47%;
+      }
+      .pull-right ~ p {
+        clear: both;
+      }
+      #slideshow .slide .content code {
+        font-size: 0.8em;
+      }
+      #slideshow .slide .content pre code {
+        font-size: 0.9em;
+        padding: 15px;
+      }
+      .inverse {
+        background: #272822;
+        color: #777872;
+        text-shadow: 0 0 20px #333;
+      }
+      .inverse h1, .inverse h2 {
+        color: #f3f3f3;
+        line-height: 0.8em;
+      }
+
+      /* Slide-specific styling */
+      #slide-inverse .footnote {
+        bottom: 12px;
+        left: 20px;
+      }
+      #slide-how .slides {
+        font-size: 0.9em;
+        position: absolute;
+        top:  151px;
+        right: 140px;
+      }
+      #slide-how .slides h3 {
+        margin-top: 0.2em;
+      }
+      #slide-how .slides .first, #slide-how .slides .second {
+        padding: 1px 20px;
+        height: 90px;
+        width: 120px;
+        -moz-box-shadow: 0 0 10px #777;
+        -webkit-box-shadow: 0 0 10px #777;
+        box-shadow: 0 0 10px #777;
+      }
+      #slide-how .slides .first {
+        background: #fff;
+        position: absolute;
+        top: 20%;
+        left: 20%;
+        z-index: 1;
+      }
+      #slide-how .slides .second {
+        position: relative;
+        background: #fff;
+        z-index: 0;
+      }
+
+      /* Two-column layout */
+      .left-column {
+        color: #777;
+        width: 20%;
+        height: 92%;
+        float: left;
+      }
+        .left-column h2:last-of-type, .left-column h3:last-child {
+          color: #000;
+        }
+      .right-column {
+        width: 75%;
+        float: right;
+        padding-top: 1em;
+      }
+
+      /* Custom CSS */
       img { max-width:350px; max-height:350px; }
       h1 { margin-top:0px; }
-      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; font-size:9pt; }
-      .onlyimage img { min-width:100%;  }
-
-      img {  border:2px solid #fff; box-shadow: 0px 0px 40px #ccc; -moz-box-shadow: 0px 0px 40px #ccc; -webkit-box-shadow: 0px 0px 40px #ccc; -khtml-box-shadow: 0px 0px 40px #ccc; } 
+      img {  border:2px solid #fff; box-shadow: 0px 0px 40px #ccc; -moz-box-shadow: 0px 0px 40px #ccc; -webkit-box-shadow: 0px 0px 40px #ccc; -khtml-box-shadow: 0px 0px 40px #ccc; }
       /* Two-column layout */
       .left-column {
         width: 50%;
@@ -31,80 +133,94 @@
         padding-top: 1em;
       }
 
-      .font-size-25 { font-size: 25px; } .font-size-30 { font-size: 30px; } .font-size-40 { font-size: 40px; } 
+      .font-size-25 { font-size: 25px; } .font-size-30 { font-size: 30px; } .font-size-40 { font-size: 40px; }
       .smaller { font-size: small; }
       .footnote {
         position: absolute;
         bottom: 3em;
       }
+      .onlyimage img { min-width:100%;  }
       .mini-images img { max-width:100px; }
       .exercise { font-size:small; background-color: #AEB404; border-radius: 5px; padding: 5px 20px}
-
     </style>
   </head>
   <body>
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://gnab.github.io/remark/downloads/remark-latest.min.js">
+    script src="http://code.jquery.com/jquery-2.11.1.min.js"></script>
+    <script type="text/javascript" src="http://gnab.github.io/remark/downloads/remark-latest.min.js"></script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML&delayStartupUntil=configured"></script>
     </script>
     <script>
-		
-	function GetURLParameter(sParam)
-	{
-		var sPageURL = window.location.search.substring(1);
-		var sURLVariables = sPageURL.split('&');
-		for (var i = 0; i < sURLVariables.length; i++) 
-		{
-			var sParameterName = sURLVariables[i].split('=');
-			if (sParameterName[0] == sParam) 
-			{
-				return decodeURIComponent(sParameterName[1]);
-			}
-		}
-	}
 
-	function base_url(url, segment){
-		// get the segments
-		pathArray = url.split( '/' );
-		// find where the segment is located
-		indexOfSegment = pathArray.indexOf(segment);
-		// make base_url be the origin plus the path to the segment
-		return pathArray.slice(0,indexOfSegment).join('/') + '/';
-	}
+      // URL functions
+      function GetURLParameter(sParam) {
+        var sPageURL = window.location.search.substring(1);
+        var sURLVariables = sPageURL.split('&');
+        for (var i = 0; i < sURLVariables.length; i++) {
+          var sParameterName = sURLVariables[i].split('=');
+          if (sParameterName[0] == sParam) {
+            var githubURL = decodeURIComponent(sParameterName[1]);
+            return githubURL.replace('githubusercontent', 'githack');
+          }
+        }
+      }
 
-	function isAbsolute(url) {
+      function base_url(url, segment) {
+        // get the segments
+        pathArray = url.split( '/' );
+        // find where the segment is located
+        indexOfSegment = pathArray.indexOf(segment);
+        // make base_url be the origin plus the path to the segment
+        return pathArray.slice(0,indexOfSegment).join('/') + '/';
+      }
 
-		var pat = /^https?:\/\//i;
-		if (pat.test(url))
-		{
-		    return true;
-		}
-		
-		return false;
+      function isAbsolute(url) {
 
-	}
+        var pat = /^https?:\/\//i;
+        if (pat.test(url)) {
+          return true;
+        }
 
-	function ResolveUrl(baseUrl, url) {
-	    if ( isAbsolute(url) ) return url;
-	    
-	    if ( url.indexOf("~") == 0 ) url = url.substring(1); 	
-	    if ( url.indexOf(".") == 0 ) url = url.substring(1); 
-	    if ( url.indexOf("/") != 0 ) url = "/" + url;
-	   
-	    return baseUrl + url;
-	}
-	
-	var md = GetURLParameter("md");
-	var slideshow = remark.create({ sourceUrl: md });
-	
-	var base_url = base_url(md);
-	var imgs = $('img')
-	for(var i=0; i < imgs.length; i++) {
-		var img = imgs[i];
-		$(img).attr('src', ResolveUrl(base_url, $(img).attr('src')) );
-	}
-	
-	
+        return false;
+      }
 
+      function ResolveUrl(baseUrl, url) {
+        if ( isAbsolute(url) ) return url;
+
+          if ( url.indexOf("~") == 0 ) url = url.substring(1);
+          if ( url.indexOf(".") == 0 ) url = url.substring(1);
+          if ( url.indexOf("/") != 0 ) url = "/" + url;
+
+          return baseUrl + url;
+      }
+
+      // Setup Remark
+      var md = GetURLParameter("md");
+      var slideshow = remark.create({
+        ratio: '16:9',
+        sourceUrl: md,
+        highlightStyle: 'monokai'
+      });
+
+      // Setup image URLs
+      var base_url = base_url(md);
+      var imgs = $('img')
+      for(var i=0; i < imgs.length; i++) {
+        var img = imgs[i];
+        $(img).attr('src', ResolveUrl(base_url, $(img).attr('src')) );
+      }
+
+      // Setup MathJax
+      MathJax.Hub.Config({
+        tex2jax: {
+          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+        }
+      });
+      MathJax.Hub.Queue(function() {
+        $(MathJax.Hub.getAllJax()).map(function(index, elem) {
+          return(elem.SourceElement());
+        }).parent().addClass('has-jax');
+      });
+      MathJax.Hub.Configured();
     </script>
   </body>
 </html>
