A typo importing JQuery fixed.

--- a/viewer.html
+++ b/viewer.html
@@ -145,7 +145,7 @@
     </style>
   </head>
   <body>
-    script src="http://code.jquery.com/jquery-2.11.1.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.11.1.min.js"></script>
     <script type="text/javascript" src="http://gnab.github.io/remark/downloads/remark-latest.min.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML&delayStartupUntil=configured"></script>
     </script>
