--- a/viewer.html
+++ b/viewer.html
@@ -225,6 +225,29 @@
         border-radius: 5px;
         padding: 5px 20px
       }
+
+      table {
+	    border-collapse: collapse;
+	    font-size: 12px;
+      }
+      table tr {
+            border-top: 1px solid #CCC;
+      }
+
+      table th {
+            border: 1px solid #DDD;
+	    padding: 6px 13px;
+	    background-color: #E2E2E2;
+      }
+      table td {
+            border: 1px solid #DDD;
+	    padding: 6px 13px;
+      }
+
+	table tr:nth-child(2n) {
+	    background-color: #F8F8F8;
+	}
+
     </style>
   </head>
   <body>
